--- a/grade_tracker/grades/templates/home.html
+++ b/grade_tracker/grades/templates/home.html
@@ -60,7 +60,7 @@
     {% else %}
         <div class="alert alert-warning text-center mt-5" role="alert">
             Please <a href="{% url 'register' %}" class="alert-link">register</a> or 
-            <a href="{% url 'login' %}" class="alert-link">log in</a> to track grades.
+            <a href="{% url 'login' %}" class="alert-link">log in</a> to add your grades.
         </div>
     {% endif %}
      <!-- Student List Section -->
